--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-{
-  "name": "welcome-fairy",
-  "version": "1.0.0",
+  "name": "welcomefairy-discord-bot",
+  "version": "1.1.0",
   "type": "module",
   "main": "index.js",
-  "engines": { "node": ">=18.18" },
   "scripts": {
     "start": "node index.js",
-    "register": "node deploy-commands.js",
-    "health": "node -e \"console.log('ok')\""
+    "deploy:commands": "node deploy-commands.js"
   },
+  "engines": { "node": ">=18.18" },
   "dependencies": {
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
